Revert "Avoid scrollbar in silder"
This reverts commit f4f8a0f77e1ba60e6f3bd030a64155951745e35e.

--- a/themes/client/html/default/aimeos.css
+++ b/themes/client/html/default/aimeos.css
@@ -103,10 +103,6 @@ img {
 	margin: 4rem 0;
 }
 
-.aimeos .swiffy-slider .slider-container {
-	overflow-x: unset;
-}
-
 .aimeos .btn {
 	width: 12rem;
 	vertical-align: top;
